--- a/index.html
+++ b/index.html
@@ -75,46 +75,46 @@
 
     <!--   section 1 -->
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="Image/portada.png" class="d-block w-100" alt="portada">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Image/portada1.png" class="d-block w-100" alt="portada1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Image/portada2.png" class="d-block w-100" alt="portada2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
         </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Image/portada.png" class="d-block w-100" alt="portada">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Image/portada1.png" class="d-block w-100" alt="portada1">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Image/portada2.png" class="d-block w-100" alt="portada2">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <!-- seccion 2 -->
 
@@ -124,7 +124,8 @@
                 <div class="card card-home">
                     <img src="image/home1.png" class="card-img-top" alt="productos">
                     <div class="card-body">
-                        <p class="card-text">Te mostramos nuestra variedad de productos y aromas, elegi el que mas se conecte con tus sentidos.</p>
+                        <p class="card-text">Te mostramos nuestra variedad de productos y aromas, elegi el que mas se
+                            conecte con tus sentidos.</p>
                         <a href="productos.html" class="btn btn-primary">Productos</a>
                     </div>
                 </div>
@@ -133,7 +134,8 @@
                 <div class="card card-home">
                     <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
                     <div class="card-body">
-                        <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y te compartimos info. util para cuidar y estar en contacto con la naturaleza.</p>
+                        <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y te compartimos
+                            info. util para cuidar y estar en contacto con la naturaleza.</p>
                         <a href="info.html" class="btn btn-primary">Curiosidades</a>
                     </div>
                 </div>
@@ -142,7 +144,8 @@
                 <div class="card card-home">
                     <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
                     <div class="card-body">
-                        <p class="card-text">Sabias que tambien podes vender nustros productos en tu local? o eleginos para souvenir de tu boda o evento.</p>
+                        <p class="card-text">Sabias que tambien podes vender nustros productos en tu local? o eleginos
+                            para souvenir de tu boda o evento.</p>
                         <a href="mayorista.html" class="btn btn-primary">Mayorista</a>
                     </div>
                 </div>
@@ -192,7 +195,7 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </div>
 
