--- a/nosotras.html
+++ b/nosotras.html
@@ -93,7 +93,7 @@
     <!-- Section 2 -->
 
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center card-nos">
         <div class="col-lg-6 col-md-8">
             <img src="Image/jose.png" alt="Jose Ramos" class="nos_main_img">
         <article class="nos_main_art">
@@ -176,7 +176,7 @@
             </section>
         </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
 </script>
