--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
     <!-- inicio header  -->
 
     <header>
-
-    <div class="barra">
-            <div class="logo">
-                <img src="img/logo.jpg" alt="Logo" class="logo-img">
-                <h1>Ruh - Esencia</h1>
-            </div>
-            <div class="redes_head">
-                <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram"></a>
-                <a href="https://www.facebook.com" target="_blank" class="redes_head1">
-                    <img src="logos/face-head.png" alt="Facebook"></a>
-            </div>
+        <div class="barra">
+        <div class="logo">
+            <img src="img/logo.jpg" alt="Logo" class="logo-img">
+            <h1>Ruh - Esencia</h1>
         </div>
-    </header>
+        <!-- <div class="redes_head"> 
+            <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
+                <img src="logos/insta-head.png" alt="Instagram" width="40"></a>
+            <a href="https://www.facebook.com" target="_blank" class="redes_head1">
+                <img src="logos/face-head.png" alt="Facebook" width="40"></a>
+        <!-- </div> -->
+    </div>
 
     <!-- inicio nav  -->
+
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
@@ -77,6 +76,7 @@
         </div>
     </nav>
 
+</header>
     <!--   section 1 -->
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -90,21 +90,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/portada.png" class="d-block w-100" alt="portada">
+                <img src="img/carousel-1.jpg" class="d-block w-100" alt="portada">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos. </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel-2.jpg" class="d-block w-100" alt="portada1" sizes="auto">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/portada1.png" class="d-block w-100" alt="portada1">
+                <img src="img/carousel-3.jpg" class="d-block w-100" alt="portada2">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="img/portada2.png" class="d-block w-100" alt="portada2">
-                <div class="carousel-caption d-none d-md-block">
-                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                    <p class="text-carousel"> Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
         </div>
@@ -122,6 +122,7 @@
 
     <!-- seccion 2 -->
 
+<main class="cont-home">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
@@ -176,6 +177,7 @@
 
     <!-- footer -->
 
+
     <footer>
         <div class="foot">
             <nav class="botonera_f">
@@ -222,10 +224,12 @@
             </section>
         </div>
     </footer>
+</main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
